manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  namespace: ejemplito
  labels:
    app: micros
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micros
  template:
    metadata:
      labels:
        app: micros
    spec:
      containers:
      - name: client
        image: containerkube1.azurecr.io/microclient 
        ports:
        - containerPort: 8000
      - name: service
        image: containerkube1.azurecr.io/microservice
        ports:
        - containerPort: 8080
