manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: ejemplito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: containerkube1.azurecr.io/microfront
        ports:
        - containerPort: 80
