manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: ejemplito
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
